Fix body heigh to stretch to full viewport heigh

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --color-basic-white: #fcfcfc;
-  --color-basic-black: #050505; 
+  --color-basic-black: #050505;
   --color-basic-grey: #d0d0d0;
   --color-pure-white: #fff;
   --color-accent-blue-light: rgba(124, 168, 225, 0.8);
@@ -13,6 +13,7 @@ body {
   margin: 0;
   min-width: 320px;
   width: 100%;
+  height: 100vh;
   font-family: 'Inter', sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -21,7 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--color-basic-black);
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
 }
 
 code {
